<resources>
    <string name="action_settings">Settings</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_archive_chat">Archive chat</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_share_with">Share with…</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="title_activity_choose_contacts">Choose Contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="title_activity_new_chat">New chat</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread chat</item>
        <item quantity="other">%d unread chats</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? The chat with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark">Would you like to remove the bookmark for %s?</string>
    <string name="remove_bookmark_and_close">Would you like to remove the bookmark for %s and archive the chat?</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="invite_contact">Invite contact</string>
    <string name="start_group_chat">Start group chat</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">%1$s has crashed</string>
    <string name="crash_report_message">Using your XMPP account to send in stack traces helps the ongoing development of %1$s.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Could not connect to account</string>
    <string name="problem_connecting_to_accounts">Could not connect to multiple accounts</string>
    <string name="touch_to_fix">Tap to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">Add this missing contact to your contact list?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Getting ready to send image</string>
    <string name="preparing_images">Getting ready to send images</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear chat history</string>
    <string name="clear_histor_msg">Do you want to delete all messages in this chat?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_shared">This file has been shared with other chats.</string>
    <string name="delete_file_dialog_confirm">Are you sure you want to delete this file?</string>
    <string name="delete_file_dialog_copies">This will not delete copies of this file that are stored on other devices or servers.</string>
    <plurals name="delete_files_dialog">
        <item quantity="one">Delete file</item>
        <item quantity="other">Delete %d files</item>
    </plurals>
    <string name="pref_send_crash_reports">Send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the development</string>
    <string name="pref_confirm_messages">Read receipts</string>
    <string name="pref_confirm_messages_summary">When enabled, your contacts will see when you’ve read their messages.</string>
    <string name="encryption_choice_unencrypted">Clear text</string>
    <string name="encryption_choice_pgp">OpenPGP</string>
    <string name="encryption_choice_omemo">OMEMO</string>
    <string name="mgmt_account_delete">Delete account</string>
    <string name="server_info_show_more">Server info</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="pref_allow_message_correction">Message edits</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="show_block_list">Show block list</string>
    <string name="pref_create_backup">Create backup</string>
    <string name="pref_create_backup_summary">Backups will be stored in %s</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="change_password">Change password</string>
    <string name="pref_chat_states">Typing notifications</string>
    <string name="pref_chat_states_summary">Let your contacts know when you are writing messages to them</string>
    <string name="pref_presence_settings">Availability</string>
    <string name="pref_away_when_screen_off">Away when device is locked</string>
    <string name="pref_away_when_screen_off_summary">Show as Away when the device is locked</string>
    <string name="mam_prefs">Archiving preferences</string>
    <string name="action_renew_certificate">Renew certificate</string>
    <string name="pref_picture_compression">Image Compression</string>
    <string name="share_uri_with">Share URI with…</string>
    <string name="pref_manually_change_presence">Manage availability manually</string>
    <string name="pref_manually_change_presence_summary">Set your availability when editing your status message.</string>
    <string name="pref_broadcast_last_activity">Show last seen</string>
    <string name="pref_broadcast_last_activity_summary">Let your contacts see the time you were last active in the app</string>
    <string name="share_as_uri">Share XMPP URI</string>
    <string name="share_invitation">Share invitation</string>
    <string name="edit_status_message">Edit status message</string>
    <string name="share">Share</string>
    <string name="search_messages">Search messages</string>
    <string name="pref_video_compression">Video Quality</string>
    <string name="restore_backup">Restore backup</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="make_call">Make call</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="return_to_ongoing_call">Return to ongoing call</string>
    <string name="add_to_favorites">Pin to top</string>
    <string name="encrypted_with_omemo">Encrypted with OMEMO</string>
    <string name="more_options">More options</string>
    <string name="server_invite">Invite to server</string>
    <string name="start_chat">Start chat</string>
    <string name="pref_category_sending">Sending</string>
    <string name="pref_category_receiving">Receiving</string>
    <string name="pref_automatic_download">Automatic download</string>
    <string name="pref_category_engagement_notifications">Engagement notifications</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_category_interaction">Interaction</string>
    <string name="pref_accept_invites_from_strangers">Invites from strangers</string>
    <string name="pref_accept_invites_from_strangers_summary">Accept invites to group chats from strangers</string>
    <string name="pref_create_backup_one_off_summary">Create one-off backup</string>
    <string name="pref_backup_recurring">Recurring backup</string>
    <string name="pref_backup_location">Backup location</string>
    <string name="empty_conversations_list_hint">Once you start a new conversation, you’ll see it listed here</string>
    <string name="qr_code_actions">Scan QR, Show QR, Server invite</string>
    <string name="publish_qr_code">Publish QR code</string>
    <string name="pref_import_backup_summary">Select a backup file to restore your data</string>
    <string name="pref_category_backup_storage">Storage</string>
    <string name="pref_entity_time_summary">Share your current time with contacts to see their local time in return.</string>
    <string name="pref_entity_time">Share local time</string>
    <string name="pref_sync_system_dnd">Sync system DND</string>
    <string name="pref_sync_system_dnd_summary">Automatically set your status to \"Do Not Disturb\" when Android\'s DND mode is active.</string>
    <string name="pref_include_silent_modes">Include silent modes</string>
    <string name="pref_include_silent_modes_summary">Also signal \"Do Not Disturb\" when notifications are muted or the phone is on vibrate.</string>
    <string name="pref_auto_send_recording">Auto-send recordings</string>
    <string name="pref_auto_send_recording_summary">Send voice messages automatically when you finish recording.</string>
    <string name="pref_save_to_gallery">Save to Gallery</string>
    <string name="pref_save_to_gallery_summary">Automatically store media in public folders so they appear in your gallery and file manager.</string>
    <string name="select_all">Select all</string>
    <string name="search_in_chats">Search in chats</string>
</resources>