<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_engagement_notifications">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/confirm_messages"
            android:icon="@drawable/ic_done_all_24dp"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/chat_states"
            android:icon="@drawable/ic_keyboard_24dp"
            android:key="chat_states"
            android:summary="@string/pref_chat_states_summary"
            android:title="@string/pref_chat_states" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/last_activity"
            android:icon="@drawable/ic_visibility_24dp"
            android:key="last_activity"
            android:summary="@string/pref_broadcast_last_activity_summary"
            android:title="@string/pref_broadcast_last_activity" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/entity_time"
            android:icon="@drawable/ic_schedule_24dp"
            android:key="entity_time"
            android:summary="@string/pref_entity_time_summary"
            android:title="@string/pref_entity_time" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_interaction">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/allow_message_correction"
            android:icon="@drawable/ic_edit_24dp"
            android:key="allow_message_correction"
            android:summary="@string/pref_allow_message_correction_summary"
            android:title="@string/pref_allow_message_correction" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/accept_invites_from_strangers"
            android:icon="@drawable/ic_domino_mask_24dp"
            android:key="accept_invites_from_strangers"
            android:summary="@string/pref_accept_invites_from_strangers_summary"
            android:title="@string/pref_accept_invites_from_strangers" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_presence_settings">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/manually_change_presence"
            android:disableDependentsState="true"
            android:icon="@drawable/ic_announcement_24dp"
            android:key="manually_change_presence"
            android:summary="@string/pref_manually_change_presence_summary"
            android:title="@string/pref_manually_change_presence" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/away_when_screen_off"
            android:dependency="manually_change_presence"
            android:icon="@drawable/ic_screen_lock_portrait_24dp"
            android:key="away_when_screen_off"
            android:summary="@string/pref_away_when_screen_off_summary"
            android:title="@string/pref_away_when_screen_off" />
        <!-- The name of the key reflects the old functionality but will be reused -->
        <SwitchPreferenceCompat
            android:defaultValue="@bool/dnd_sync_system"
            android:dependency="manually_change_presence"
            android:icon="@drawable/ic_do_not_disturb_on_24dp"
            android:key="dnd_on_silent_mode"
            android:summary="@string/pref_sync_system_dnd_summary"
            android:title="@string/pref_sync_system_dnd" />
        <!-- The name of the key mirrors the old (pre DND mode) functionality. Elsewhere in the app it will be referred to as DND_INCLUDE_SILENT_MODES -->
        <SwitchPreferenceCompat
            android:defaultValue="@bool/dnd_include_silent_modes"
            android:dependency="dnd_on_silent_mode"
            android:icon="@drawable/ic_vibration_24dp"
            android:key="treat_vibrate_as_silent"
            android:summary="@string/pref_include_silent_modes_summary"
            android:title="@string/pref_include_silent_modes" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_application">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/send_crash_reports"
            android:icon="@drawable/ic_report_24dp"
            android:key="send_crash_reports"
            android:summary="@string/pref_never_send_crash_summary"
            android:title="@string/pref_send_crash_reports" />

    </PreferenceCategory>

</PreferenceScreen>