<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_presence"
        android:icon="@drawable/ic_announcement_24dp"
        android:title="@string/edit_status_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/share_uri_with"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share_uri"
                android:icon="@drawable/ic_xmpp_24dp"
                android:title="@string/share_as_uri" />
            <item
                android:id="@+id/action_share_http"
                android:icon="@drawable/ic_join_24dp"
                android:title="@string/share_invitation" />
            <item
                android:id="@+id/action_show_qr_code"
                android:icon="@drawable/ic_qr_code_24dp"
                android:title="@string/show_qr_code" />
            <item
                android:id="@+id/action_share_barcode"
                android:icon="@drawable/ic_publish_24dp"
                android:title="@string/publish_qr_code" />
        </menu>
    </item>

    <item
        android:id="@+id/action_show_block_list"
        android:title="@string/show_block_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_renew_certificate"
        android:title="@string/action_renew_certificate"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_server_info_show_more"
        android:checkable="true"
        android:checked="false"
        android:title="@string/server_info_show_more"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mam_prefs"
        android:title="@string/mam_prefs" />

    <item
        android:id="@+id/action_change_password_on_server"
        android:title="@string/change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_account"
        android:title="@string/mgmt_account_delete" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>