<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/backup">
        <ListPreference
            android:defaultValue="@integer/automatic_message_deletion"
            android:icon="@drawable/ic_calendar_month_24dp"
            android:key="recurring_backup"
            android:title="@string/pref_backup_recurring" />

        <Preference
            android:icon="@drawable/ic_archive_24dp"
            android:key="create_one_off_backup"
            android:summary="@string/pref_create_backup_one_off_summary"
            android:title="@string/pref_create_backup" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/restore">

        <Preference
            android:icon="@drawable/ic_unarchive_24dp"
            android:key="restore"
            android:summary="@string/pref_import_backup_summary"
            android:title="@string/restore_backup">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="eu.siacs.conversations.ui.ImportBackupActivity"
                android:targetPackage="@string/applicationId" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_backup_storage">
        <Preference
            android:icon="@drawable/ic_folder_open_24dp"
            android:key="backup_location"
            android:summary="@string/pref_create_backup_summary"
            android:title="@string/pref_backup_location" />
    </PreferenceCategory>


</PreferenceScreen>