<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />

</menu>