<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="5"
        android:title="@string/search_messages"
        android:visible="@bool/show_combined_search_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_search_all_conversations"
                android:title="@string/search_all_conversations" />
            <item
                android:id="@+id/action_search_this_conversation"
                android:title="@string/search_this_conversation" />
        </menu>
    </item>
    <item
        android:id="@+id/action_qr_codes"
        android:icon="@drawable/ic_qr_code_scanner_24dp"
        android:orderInCategory="10"
        android:title="@string/qr_code_actions"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:icon="@drawable/ic_qr_code_scanner_24dp"
                android:title="@string/scan_qr_code" />
            <item
                android:id="@+id/action_show_qr_code"
                android:icon="@drawable/ic_qr_code_24dp"
                android:title="@string/show_qr_code" />
            <item
                android:id="@+id/action_easy_invite"
                android:icon="@drawable/ic_join_24dp"
                android:title="@string/server_invite" />
        </menu>
    </item>
</menu>